# cbdep

./: cbdep.config  pyproject.toml
cbdep/scripts/: install.py
src/cbdep/: cbdep.py
