[project]
name = "cbdep"
description = "Generalized tool installer"
readme = "README.md"
dynamic = [ "version" ]
license = "Apache-2.0"
authors = [
    { name = "Couchbase Build Team", email = "build-team@couchbase.com" }
]
requires-python = ">=3.13"
dependencies = [
    "PyYAML",
    "distro",
    "requests",
    "packaging",
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.6',
    'Topic :: Database :: Front-Ends',
]

[project.scripts]
cbdep = "cbdep.cbdep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cbdep/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests"
]